tests/expectations/compiler/integers/u8/negate.out
Error [ETYC0372117]: Expected a signed integer, group, or field but type `u8` was found.
    --> compiler-test:3:17
     |
   3 |         return -a;
     |                 ^
